--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -45,6 +45,8 @@ $icon-size: (
         "bookmark-active": "bookmark_active.svg",
         "badge-g": "ico_badge_g.svg",
         "plus": "ico_plus.svg",
+        "download": "ico_download.svg",
+        "info": "ico_alert_circle.svg",
     )
     
 ) !default;
