--- a/src/scss/contents.scss
+++ b/src/scss/contents.scss
@@ -18,6 +18,7 @@
 // 카테고리 scss
 @import "member";			// 회원계정
 @import "reservation";		// 차량예약
+@import "benefit";			// 혜택
 @import "history";			// 이용내역
 @import "mypage";			// 내정보
 @import "customer";			// 고객센터
