--- a/src/scss/_benefit.scss
+++ b/src/scss/_benefit.scss
@@ -63,6 +63,7 @@
                 height: 100px;
                 border-radius: $border-radius;
                 background-color: #d9d9d9;
+                overflow: hidden;
             }
             .text-area {
                 display: flex;
