네이밍 규칙 아이콘 파일명 수정

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -29,24 +29,24 @@ $icon-size: (
 		"search": "search.svg",
         "sort": "sort.svg",
 		"star": "star.svg",
-        "delete": "ico_delete.svg",
-        "close": "ico_close.svg", 
-        "home": "ico_home.svg",
-        "back": "ico_back.svg",
-        "next-sm": "ico_next_sm.svg",
+        "delete": "icon_delete.svg",
+        "close": "icon_close.svg", 
+        "home": "icon_home.svg",
+        "back": "icon_back.svg",
+        "next-sm": "icon_next_sm.svg",
         "arrow-right": "arrow-right.svg",
-        "ico-check": "ico_check_off.svg",
-        "arrow-right-nav050": "ico_arrow_right_navy050.svg",
+        "ico-check": "icon_check_off.svg",
+        "arrow-right-nav050": "icon_arrow_right_navy050.svg",
         "arrow-left": "arrow-left.svg",
-        "arrow-bot": "ico_arrow_bot.svg",
-        "eye-on": "ico_eye_on.svg",
-        "eye-off": "ico_eye_off.svg",
-        "bookmark": "ico_bookmark.svg",
+        "arrow-bot": "icon_arrow_bot.svg",
+        "eye-on": "icon_eye_on.svg",
+        "eye-off": "icon_eye_off.svg",
+        "bookmark": "icon_bookmark.svg",
         "bookmark-active": "bookmark_active.svg",
-        "badge-g": "ico_badge_g.svg",
-        "plus": "ico_plus.svg",
-        "download": "ico_download.svg",
-        "info": "ico_alert_circle.svg",
+        "badge-g": "icon_badge_g.svg",
+        "plus": "icon_plus.svg",
+        "download": "icon_download.svg",
+        "info": "icon_alert_circle.svg",
     )
     
 ) !default;
