--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -48,6 +48,7 @@ html.is-open, html.is-open body {
             padding: 24px 20px 12px;
             font-size: 18px;
             font-weight: bold;
+
             .title{
                 color: $navy-070;
                 font-size: 20px;
@@ -203,13 +204,18 @@ html.is-open, html.is-open body {
 				transform: translateY(0%);
             }
         }
-        .layer-container {
+        .layer-container{
 			border-radius: 0;
             opacity: 1;
 			height:100%;
             transform: translateY(100%);
             transition: transform 0.8s;
         }
+		.layer-wrap{
+			overflow-y:auto;
+			scroll-behavior: smooth;
+			// -webkit-overflow-scrolling:touch;
+		}
 	}
 }
 	
