--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -47,6 +47,7 @@ $icon-size: (
         "plus": "icon_plus.svg",
         "download": "icon_download.svg",
         "info": "icon_alert_circle.svg",
+        "file-export": "ico_file_export.svg",
     )
     
 ) !default;
