--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -47,7 +47,10 @@ $icon-size: (
         "plus": "icon_plus.svg",
         "download": "icon_download.svg",
         "info": "icon_alert_circle.svg",
-        "file-export": "ico_file_export.svg",
+        "file-export": "icon_file_export.svg",
+        "text-delete": "icon_text_del.svg",
+        "more": "icon_more.svg",
+        "share": "icon_share.svg",
     )
     
 ) !default;
