--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -179,6 +179,27 @@
 						</li>
 					</ul>
 				</div>
+
+				<div class="box e">
+					<ul>
+						<li>
+							<span class="icon"><i class="ico lotte bic"></i></span>
+							<span class="text">eye-on</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico public bic"></i></span>
+							<span class="text">eye-off</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico master bic"></i></span>
+							<span class="text">eye-off</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico dod bic"></i></span>
+							<span class="text">eye-off</span>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</section>
 	</div>
