--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -25,6 +25,10 @@ $icon-size: (
         "width": 32px,
         "height": 32px
     ),
+	"bic": (
+        "width": 48px,
+        "height": 48px
+    ),
     "file": (
 		"search": "search.svg",
         "sort": "sort.svg",
