--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -7,9 +7,11 @@
     align-items: center;
 }
 
-
 .mt60 {
     margin-top: 60px;
+}
+.pt0{
+    padding-top: 0 !important;
 }
 .pb0{
     padding-bottom: 0px !important;
@@ -17,8 +19,9 @@
 hr.divider {
     display: block;
     background-color: $navy-010;
-    height: 10px;
+    height: 7px;
     border: 0;
+    border-top: 1px solid $gray-020;
     margin: 0 -20px;
 }
 
