혜택 쿠폰몰 작업

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -54,6 +54,10 @@
 				<div class="box a">
 					<ul>
 						<li>
+							<span class="icon" style="background-color:#000"><i class="ico download-gray000 lg"></i></span>
+							<span class="text">download</span>
+						</li>
+						<li>
 							<span class="icon"><i class="ico badge-g xl2"></i></span>
 							<span class="text">badge-g</span>
 						</li>
@@ -180,26 +184,6 @@
 					</ul>
 				</div>
 
-				<div class="box e">
-					<ul>
-						<li>
-							<span class="icon"><i class="ico lotte bic"></i></span>
-							<span class="text">eye-on</span>
-						</li>
-						<li>
-							<span class="icon"><i class="ico public bic"></i></span>
-							<span class="text">eye-off</span>
-						</li>
-						<li>
-							<span class="icon"><i class="ico master bic"></i></span>
-							<span class="text">eye-off</span>
-						</li>
-						<li>
-							<span class="icon"><i class="ico dod bic"></i></span>
-							<span class="text">eye-off</span>
-						</li>
-					</ul>
-				</div>
 			</div>
 		</section>
 	</div>
