--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -50,6 +50,8 @@ $icon-size: (
         "badge-g": "icon_badge_g.svg",
         "plus": "icon_plus.svg",
         "download": "icon_download.svg",
+        "download-gray000": "icon_download_gray000.svg",
+        "download-uncheck": "icon_download_uncheck.svg",
         "info": "icon_alert_circle.svg",
         "file-export": "icon_file_export.svg",
         "text-delete": "icon_text_del.svg",
