--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -3,12 +3,15 @@
 // title default 20
 .title{
 	font-size: $font-xl; //20
+	font-weight:700;
 
 	&-md{
 		font-size: $font-lg; //18
+		font-weight:700;
 	}
 	&-sm{
 		font-size:$font-md; //16
+		font-weight:500;
 	}
 	&-xs{
 	}
