디자인 수정 반영

--- a/src/components/text.html
+++ b/src/components/text.html
@@ -68,7 +68,7 @@ h2 {
 						<br>
 						<p class="desc"><b>default 14px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
 						<br>
-						<p class="desc-md"><b>md 16px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+						<p class="desc-xl"><b>md 16px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
 						<br>
 						<p class="desc-xl"><b>xl 20px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
 					</div>
