--- a/src/scss/_libs/_benefit01.scss
+++ b/src/scss/_libs/_benefit01.scss
@@ -39,7 +39,7 @@
 			background-color:$navy-010;
 			border-radius:$border-radius-50;
 		}
-		.desc-md{
+		.desc-xl{
 			margin-top:10px;
 			font-weight:500;
 		}
