--- a/src/scss/_libs/_reservation01.scss
+++ b/src/scss/_libs/_reservation01.scss
@@ -293,7 +293,7 @@
 			color:$navy-070;
 		}
 
-		.desc-md{
+		.desc-xl{
 			color:$navy-040;
 		}
 
@@ -416,9 +416,9 @@
 
 	&.rsv-one-way{
 		.one-way{
-			padding-top:0;
-
+			padding-top:20px;
 			.desc {
+				margin-top:18px;
 				font-size:14px;
 				line-height:20px;
 				color:#8C989E;
@@ -429,11 +429,11 @@
 			}
 
 		}
-		
-		.btn{
+
+		.btn-wrap{
 			margin-bottom:11px;
 		}
-
+		
 		.layer-footer{
 			padding:28px 20px 0;
 		}
