--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -1,3 +1,48 @@
 @charset "UTF-8";
 
 @import "_libs/_mypage01";
+
+
+// 등급안내
+.level-guide{
+    li{
+        padding: 16px 0 ;
+        border-bottom: 1px solid $navy-010;
+        @include flex-center();
+        .level-desc{
+            margin-left: 10px;
+            strong{
+                font-size: 14px;
+                font-weight: 500;
+                .badge{
+                    margin-right: 4px;
+                }
+            }
+            .criteria{
+                margin-top: 8px;
+                color: $navy-040;
+                font-size: 10px;
+            }
+            .benefit{
+                margin-top: 4px;
+                color: $navy-040;
+                font-size: 12px;
+                em{
+                    color: $navy-070;
+                    font-weight: 500;
+                    margin-right: 4px;
+                }
+                p + p{
+                    margin-top: 4px;
+                }
+            }
+            
+        }
+    }
+  
+    .notice{
+        color: $navy-040;
+        font-size: 14px;
+        margin: 16px 0 60px;
+    }
+}
